--- a/release_images.yml
+++ b/release_images.yml
@@ -1,25 +1,10 @@
 ---
 release_images:
   1:
-    framework: "tensorflow"
-    version: "2.2.0"
-    training:
-      device_types: ["cpu", "gpu"]
-      python_versions: ["py37"]
-      os_version: "ubuntu18.04"
-      cuda_version: "cu101"
+    framework: "pytorch"
+    version: "1.3.1"
     inference:
-      device_types: ["cpu", "gpu"]
-      python_versions: ["py37"]
-      os_version: "ubuntu18.04"
-      cuda_version: "cu102"
-      force_release: True
-  2:
-    framework: "tensorflow"
-    version: "2.2.0"
-    training:
-      device_types: ["gpu"]
-      python_versions: ["py37"]
+      device_types: ["eia"]
+      python_versions: ["py36"]
       os_version: "ubuntu18.04"
       cuda_version: "cu101"
-      example: True
