--- a/release_images.yml
+++ b/release_images.yml
@@ -5,7 +5,7 @@ release_images:
     version: "1.15.3"
     training:
       device_types: ["cpu", "gpu"]
-      python_versions: ["py36", "py27"]
+      python_versions: ["py37", "py36", "py27"]
       os_version: "ubuntu18.04"
       cuda_version: "cu100"
       example: False        # [Default: False] Set to True to denote that this image is an Example image
@@ -22,17 +22,6 @@ release_images:
       disable_sm_tag: False
       force_release: False
   2:
-    framework: "tensorflow"
-    version: "1.15.3"
-    training:
-      device_types: ["gpu"]
-      python_versions: ["py37", "py36"]
-      os_version: "ubuntu18.04"
-      cuda_version: "cu100"
-      example: True
-      disable_sm_tag: False  # [Default: False] This option is not used by Example images
-      force_release: False
-  3:
     framework: "tensorflow"
       version: "1.15.3"
       training:
