--- a/release_images.yml
+++ b/release_images.yml
@@ -4,7 +4,7 @@ release_images:
     framework: "pytorch"
     version: "1.3.1"
     inference:
-      device_types: ["cpu", "gpu"]
+      device_types: ["eia"]
       python_versions: ["py36"]
       os_version: "ubuntu16.04"
       cuda_version: "cu101"
